fixed back to top button overlap

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -83,3 +83,6 @@ height: 100%;
 .card-content {
     height: 100%;
 }
+.modal {
+  z-index: 2000;
+}
